--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "axios": "^0.19.2",
+    "buefy": "^0.8.20",
+    "bulma": "^0.9.0",
+    "gridsome": "^0.7.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3"
   }
 }
