--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bulma": "^0.9.0",
     "gridsome": "^0.7.0",
     "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.3"
+    "sass-loader": "^9.0.3",
+    "vue-infinite-scroll": "^2.0.2"
   }
 }
