--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "gridsome": "^0.7.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
-    "vue": "^2.6.11",
-    "vue-infinite-scroll": "^2.0.2"
+    "vue": "^2.6.11"
   }
 }
